--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using FarmerbotWebUI.Client
 @using FarmerbotWebUI.Client.Shared
+@using FarmerbotWebUI.Shared
 @using FarmerbotWebUI.Client.Services.Docker;
 @using FarmerbotWebUI.Client.Services.EventConsole;
 @using Radzen
