much new, changed and fixed

--- a/Client/App.razor
+++ b/Client/App.razor
@@ -69,6 +69,14 @@
         _ = InitializeDocker();
     }
 
+    private async Task InitializeCompose()
+    {
+        //if (AppSettings.DockerSettings. != "" || AppSettings.DockerSettings.DockerEndpointWindows != "")
+        //{
+        //    await DockerService.StartStatusInterval();
+        //}
+    }
+
     public void Dispose()
     {
         AppSettings.OnAppSettingsChanged -= UpdateAppSettings;
