--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -9,6 +9,7 @@
 @using FarmerbotWebUI.Client
 @using FarmerbotWebUI.Client.Shared
 @using FarmerbotWebUI.Shared
+@using FarmerbotWebUI.Client.Services.Settings;
 @using FarmerbotWebUI.Client.Services.Docker;
 @using FarmerbotWebUI.Client.Services.EventConsole;
 @using Radzen
